# PromptBIMTestApp1

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  AuditReport.md  BuildSetupAndDemo_0326.md  CHANGELOG.md  CLAUDE.md  CLAUDE.md.bak  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  PROJECT.md  PROMPT.md  PROMPT_P10.md  PROMPT_P11.md  PROMPT_P12.md  PROMPT_P13.md  PROMPT_P14.md  PROMPT_P17.1.md  PROMPT_P17.2.md  PROMPT_P17.md  PROMPT_P18.md  PROMPT_P19.md  PROMPT_P2.5.md  PROMPT_P20.md  PROMPT_P21.md  PROMPT_P22.md  PROMPT_P4.5.md  PROMPT_P4.8.md  PROMPT_P4.md  PROMPT_P5.md  PROMPT_P7.md  PROMPT_P8.5.md  PROMPT_P8.md  README.md  SECURITY.md  SETUP.md  SKILL.md  (+7 more)
.rdc/: pending-prompt.md
PromptBIMTestApp1/: BIMSceneBuilder.swift  ContentView.swift  Info.plist  NativeBIMBridge.swift  PBResult.swift  PromptBIMTestApp1App.swift  PythonBridge.swift  SceneKitView.swift
PromptBIMTestApp1.xcodeproj/: project.pbxproj
PromptBIMTestApp1Tests/: BIMSceneBuilderTests.swift  ContentViewTests.swift  NativeBIMBridgeTests.swift  PBResultTests.swift  PythonBridgeTests.swift
assets/: ASSET_MANIFEST.md  LICENSES.md
cpp/: CMakeLists.txt
cpp/binding/: CMakeLists.txt  bim_core_module.cpp
cpp/bindings/: CMakeLists.txt  pybind_module.cpp
cpp/core/: AgentBridge.cpp  AgentBridge.h  BIMEntity.cpp  BIMEntity.h  BIMSceneGraph.cpp  BIMSceneGraph.h  BIMTypes.h  CMakeLists.txt  CostCalculator.cpp  CostCalculator.h  GeometryEngine.cpp  GeometryEngine.h  PropertyManager.cpp  PropertyManager.h
cpp/src/: compliance_engine.cpp  compliance_engine.h  cost_engine.cpp  cost_engine.h
cpp/tests/: CMakeLists.txt  test_agent_actions.cpp  test_binding.cpp  test_compliance.cpp  test_cost.cpp  test_entity.cpp  test_scenegraph.cpp  test_tsmc_demo.cpp
docs/: API.md  BUILDING.md  DEMO.md  DEMO_SCRIPT.md  DEMO_SCRIPT_D1.md  DesignDocForV2.md  DevWindows_Setup.md  PROJECT_STATUS.md  PTB-FAR-AI-001.md  PTB-FAR-DEMO-001.md  PTB-FAR-FINAL-001.md  PTB-FAR-FULLAUDIT-002.md  PTB-FAR-INTEGRATION-001.md  PTB-FAR-PYTEST-001.md  PTB-FAR-WIN-001.md  PromptBIM_Context_Prompt.md  PromptToBuild_Context_Prompt_v2.0.md  SKILL_INDEX.md  SKILL_v5.0_draft.md  TSMC_Presentation_D1.md  V2_Migration_Tasks.md  WINDOWS_SETUP.md  Windows_Migration_Plan_v1.0.md  Zigma_90Day_MVP_Plan_v1.0.md  Zigma_Context_Prompt_v5.0.md  Zigma_Context_Prompt_v6.0.md  Zigma_Demo_Script_v2.0.md  Zigma_M1_MVP_Mac_Sprint_Plan.md  Zigma_Media_Asset_Workflow.md  Zigma_Roadmap_Sprint_Mapping_v1.0.md  Zigma_Sprint_Task_Master_List_v1.0.md  Zigma_TSMC_Demo_Plan_v1.0.md  Zigma_TSMC_Demo_Plan_v1.1.md  Zigma_TSMC_Presentation_v2.0.md  Zigma_Windows_Checklist.md
examples/: 01_simple_box.py  02_l_shaped_office.py  README.md  prompt_modification_scenarios.md  prompt_scenarios.md  test_prompts.txt
libpromptbim/: CMakeLists.txt  vcpkg.json
libpromptbim/bindings/python/: bindings.cpp
libpromptbim/build_py/: libpromptbim.2.dylib
libpromptbim/build_py311/: CMakeCache.txt  Makefile  cmake_install.cmake  libpromptbim.2.5.0.dylib  libpromptbim.dylib
libpromptbim/include/promptbim/: compliance_engine.hpp  cost_engine.hpp  geometry.hpp  gis_engine.hpp  ifc_generator.hpp  mep_engine.hpp  promptbim.h  simulation_engine.hpp  usd_generator.hpp
libpromptbim/src/bim/: ifc_generator.cpp  pb_plan_internal.h  usd_generator.cpp
libpromptbim/src/compliance/: compliance_engine.cpp
libpromptbim/src/cost/: cost_engine.cpp
libpromptbim/src/geometry/: geometry.cpp
libpromptbim/src/gis/: gis_engine.cpp
libpromptbim/src/mep/: mep_engine.cpp
libpromptbim/src/simulation/: simulation_engine.cpp
libpromptbim/src/stubs/: future_stubs.cpp
libpromptbim/tests/: test_bim_engine.cpp  test_compliance_engine.cpp  test_cost_engine.cpp  test_geometry.cpp  test_gis_engine.cpp  test_ifc_generator.cpp  test_mep_engine.cpp  test_simulation_engine.cpp  test_thread_safety.cpp  test_utf8.cpp  test_version.cpp
media/: manifest.json
reference/: free_model_sources.md  ifc_usd_mapping.md  sample_parcel.geojson  sample_parcel_irregular.geojson  tw_zoning_reference.md
scripts/: backup_verify.sh  benchmark_memory.py  benchmark_pipeline.py  build_cpp_windows.ps1  dev_setup.sh  download_assets.py  generate_api_docs.py  m1_preflight_check.sh  measure_startup.py  media_sync.py  notify_imessage.sh  setup_windows.ps1  sync_version.sh
sprints/: CHAIN_PTB_DEMO_Report.md  M2-ENTITY_AuditReport.md  M2-ENV_AuditReport.md  PROMPT_D1-S1.md  PROMPT_D1-S2.md  PROMPT_M1-MVP.md  PROMPT_M1-MVP_ADDENDUM.md  PROMPT_M1-S1.md  PROMPT_M1-SCENE.md  PROMPT_M2-BRIDGE.md  PROMPT_M2-ENTITY.md  PROMPT_M2-MEP-DEMO.md  PROMPT_MEDIA-DL.md  PROMPT_P0.md  PROMPT_P10.2.md  PROMPT_P10.3.md  PROMPT_P11.md  PROMPT_P15.md  PROMPT_P16.md  PROMPT_P17.2.md  PROMPT_P17.md  PROMPT_P18.md  PROMPT_P2.5.md  PROMPT_P2.md  PROMPT_P21.md  PROMPT_P22.1.md  PROMPT_P22.md  PROMPT_P23.md  PROMPT_P24.md  PROMPT_P25.md  PROMPT_P26.md  PROMPT_P3.md  PROMPT_P30-USD-REVIT.md  PROMPT_P6.md  PROMPT_P9.md  PROMPT_PTB_CHAIN_DEMO.md  PROMPT_S-PTBFIX.md  PROMPT_W0.md  PTB-FAR-RESTRUCTURE-001.md  PTB_FullAuditReport_033100am.md
src/: rdc_log_handler.h
tests/: conftest.py  test_agent_runner.py  (+17 more)
zigma/: CMakeLists.txt
zigma/data/: equipment_catalog.json
zigma/docs/: agent_protocol.md
zigma/qml/: AssetBrowser.qml  BIMView3D.qml  ChatPanel.qml  CostPanel.qml  DeltaPanel.qml  DemoScene.qml  LoadingOverlay.qml  PropertyPanel.qml  ScenePicker.qml  SchedulePanel.qml  SplashScreen.qml  StatusBar.qml  ThemeManager.qml  main.qml
zigma/src/: AgentBridge.cpp  AgentBridge.h  BIMEntity.cpp  BIMEntity.h  BIMEntityModel.cpp  BIMEntityModel.h  BIMGeometryProvider.cpp  BIMGeometryProvider.h  BIMMaterialLibrary.cpp  BIMMaterialLibrary.h  BIMSceneBuilder.cpp  BIMSceneBuilder.h  BIMSceneGraph.cpp  BIMSceneGraph.h  DemoController.cpp  DemoController.h  DemoScript.cpp  DemoScript.h  SceneGraphModel.cpp  SceneGraphModel.h  SpatialParser.cpp  SpatialParser.h  ZigmaLogger.cpp  ZigmaLogger.h  main.cpp
zigma/tests/: test_agent_bridge.cpp  test_bim_components.cpp  test_bim_entity.cpp  test_entity_model.cpp  test_scene_graph.cpp
(+323 files in other folders)
