[project]
name = "promptbim"
version = "0.1.0"
description = "Prompt to BIM — AI-powered building generation on real land parcels with IFC + OpenUSD dual output"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Michael Lin", email = "michael@realitymatrix.com"}]
readme = "README.md"

dependencies = [
    # GUI
    "PySide6>=6.6",
    "pyvista>=0.43",
    "pyvistaqt>=0.11",
    # AI
    "anthropic>=0.40.0",
    # BIM
    "ifcopenshell>=0.8.0",
    "usd-core>=24.0",
    # GIS / Land
    "geopandas>=0.14",
    "shapely>=2.0",
    "fiona>=1.9",
    "pyproj>=3.6",
    "ezdxf>=1.1",
    "fastkml>=1.0",
    # Geometry & Viz
    "numpy>=1.26",
    "trimesh>=4.0",
    "matplotlib>=3.8",
    "Pillow>=10.0",
    # Infra
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "rich>=13.0",
]

[project.optional-dependencies]
pdf = ["pdfplumber>=0.10"]
voice = ["faster-whisper>=1.0"]
mcp = ["mcp>=1.0"]
web = ["fastapi>=0.100", "uvicorn>=0.25"]
dev = ["pytest>=8.0", "ruff>=0.4", "pytest-qt>=4.3", "pytest-cov>=5.0"]

[project.scripts]
promptbim = "promptbim.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
